feat: Integrate Capacitor for native Android build
Adds Capacitor dependencies and scripts to package.json.
Configures necessary metadata for native Android deployment.
Updates index.html for PWA and Android compatibility.
Introduces android permissions in metadata.json.
Adjusts component styling and color themes for better native integration.
Removes deprecated 'originalContent' from document types.
Adds a "Close App" option to the dashboard menu.

--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
+
 {
   "name": "my-dokument",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "android:init": "cap init",
+    "android:add": "cap add android",
+    "android:copy": "cap copy android",
+    "android:open": "cap open android",
+    "android:sync": "npm run build && cap sync android"
   },
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.28.0",
-    "@google/genai": "0.1.2"
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/android": "^6.0.0",
+    "jspdf": "2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "@capacitor/cli": "^6.0.0"
   }
 }
